# WildDrop

./: .dockerignore  .env  .gitignore  .prettierrc.yml  Dockerfile  README.md  bun.lockb  docker-compose.yml  package.json  tsconfig.json
contract/: Cargo.toml  lib.rs
data/: 5H4MzBj8k7vg68HG3F38NMh4Zgb8vP3kgSU12VwcLmdmGtF9.json  5HCu9s2sTd9u3GD2hQMfo6VqhP7qu18vGM1gxzu6PPKxS42u.json  az-metadata.json
src/: bootstrap.ts  config.ts  index.ts  mikro-orm.config.ts  test.ts
src/migrations/: .snapshot-WildDrop.json  Migration20240412005638.ts  Migration20240412011334.ts  Migration20240412104025.ts  Migration20240412104150.ts  Migration20240412104403.ts  Migration20240416141337.ts  Migration20240416141450.ts  Migration20240416191435.ts  Migration20240416195732.ts  Migration20240416195828.ts  Migration20240416201733.ts  Migration20240417162117.ts  Migration20240418153615.ts
src/models/: auth-key.ts  model.ts  session.ts  wallet.ts
src/plugins/: aleph-zero.ts  auth.ts  database.ts  wallet.ts
src/repositories/: auth-key.ts  session.ts  wallet.ts
src/services/: aes256.ts  crypto.ts  ed25519.ts  fs-utils.ts  hmac.ts  json-utils.ts  polkadot.ts  ss58.ts
tools/: gen-keypair.ts
