[package]
name = "tubbly"
version = "0.1.0"
authors = ["TAM LABS"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
path = "lib.rs"

[features]
default = ["std", "contract"]
std = [
    "ink/std",
]
contract = []
ink-as-dependency = []
e2e-tests = []
